--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        
 		<header>
 		<ul>
-		<img src="https://images.app.goo.gl/zCvHokXPU45yS56v7" height="500" width="1250">
+		<img src="https://www.dreamstime.com/stock-photo-donations-charity-foundation-support-concept-diverse-people-image85687808.jpg" height="500" width="1250">
 		<br>
 		<br>	
 		<li><a href="forever.html">Forever</a></li>
