--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        
 		<header>
 		<ul>
-		<img src="donations2" height="500" width="1250">
+		<img src="donations2.jpg" height="500" width="1250">
 		<br>
 		<br>	
 		<li><a href="https://www.giveindia.org/?utm_source=Sem&utm_campaign=DCNad3&utm_medium=Google&utm_term=DCNad3&utm_content=ad3&gclid=Cj0KCQiAmfmABhCHARIsACwPRAAxoQupgAgWOM770EwTdNz6OREqClqWWIi57SfsUNieqBGaIjcylS8aAm7JEALw_wcB " target="_blank">Orphans </a></li>
